syntax = "proto3";
package stem.commons;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
   flat_package: true
   lenses: true
   retain_source_code_info: false
   no_default_values_in_constructor: false
   preserve_unknown_fields: false
};

message BigDecimal {
   option (scalapb.message).type = "scala.math.BigDecimal";
   uint64 unscaledValue = 1;
   int32 scale = 2;
}